[package]
name = "akio-net"
version = "0.1.0"
authors = ["Kyle Phelps <kphelps@salsify.com>"]

[dependencies]
bytes = "0.*"
error-chain = "0.11.0"
grpc = "0.*"
protobuf = "1.*"
futures = "0.1"
futures-cpupool = "0.1"
parking_lot = { version = "0.4", features = ["nightly"] }
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
uuid = { version = "0.4", features = ["v4"] }

[build-dependencies]
protoc-rust-grpc = "0.*"
