[package]
name = "akio-net"
version = "0.1.0"
authors = ["Kyle Phelps <kylep91@gmail.com>"]
license = "Apache-2.0"

[dependencies]
bytes = "0.*"
error-chain = "0.11.0"
env_logger = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
log = "0.3"
parking_lot = { version = "0.4", features = ["nightly"] }
protobuf = { version = "1.*", features = ["with-bytes"] }
rand = "0.3"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
uuid = { version = "0.4", features = ["v4"] }

[build-dependencies]
protoc-rust = "1.*"
