[package]
name = "akio"
version = "0.1.0"
authors = ["Kyle Phelps <kphelps@salsify.com>"]
license = "Apache-2.0"

[dependencies]
akio-syntax = { path = "../akio-syntax" }
bytes = "0.4"
core_affinity = "0.4.2"
error-chain = "0.11.0"
futures = "0.1"
lazy_static = "0.2"
num_cpus = "1.0"
parking_lot = { version = "0.4", features = ["nightly"] }
rand = "0.3"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
typemap = "0.3"
uuid = { version = "0.4", features = ["v4"] }
